# LR_3

Tasks/: CMakeLists.txt  Tasks.h  functions.cpp  functions.h  main.cpp
Tasks/Task_1/: task_1.cpp
Tasks/Task_10/: CMakeLists.txt  task_10.cpp
Tasks/Task_11/: CMakeLists.txt  task_11.cpp
Tasks/Task_12/: CMakeLists.txt  task_12.cpp
Tasks/Task_13/: CMakeLists.txt  task_13.cpp
Tasks/Task_14/: CMakeLists.txt  task_14.cpp
Tasks/Task_15/: task_15.cpp
Tasks/Task_16/: CMakeLists.txt  task_16.cpp
Tasks/Task_17/: CMakeLists.txt  task_17.cpp
Tasks/Task_2/: task_2.cpp
Tasks/Task_3/: task_3.cpp
Tasks/Task_4/: task_4.cpp
Tasks/Task_5/: task_5.cpp
Tasks/Task_6/: task_6.cpp
Tasks/Task_7/: CMakeLists.txt  task_7.cpp
Tasks/Task_8/: CMakeLists.txt  task_8.cpp
Tasks/Task_9/: CMakeLists.txt  task_9.cpp
