cmake_minimum_required(VERSION 3.20)
project(Tasks)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp
               task_1 Task_1/task_1.cpp
               task_2 Task_2/task_2.cpp
               task_3 Task_3/task_3.cpp
               task_4 Task_4/task_4.cpp
               task_5 Task_5/task_5.cpp
               task_6 Task_6/task_6.cpp
               task_7 Task_7/task_7.cpp
               task_8 Task_8/task_8.cpp
               task_9 Task_9/task_9.cpp
               task_10 Task_10/task_10.cpp
               task_11 Task_11/task_11.cpp
               task_12 Task_12/task_12.cpp
               task_13 Task_13/task_13.cpp
               task_14 Task_14/task_14.cpp
               task_15 Task_15/task_15.cpp
               task_16 Task_16/task_16.cpp
               task_17 Task_17/task_17.cpp
               Tasks.h)